src/objects/WWW_Detail__c.object
<CustomObject>
    <description>Who What Where
Wie Wat Waar</description>
    <fields>
        <fullName>Afname_palletplaatsen__c</fullName>
        <label>Afname palletplaatsen</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Afroepeenheid__c</fullName>
        <inlineHelpText>Hier aangeven op welke eenheid de klant de goederen weer gaat afroepen</inlineHelpText>
        <label>Afroepeenheid</label>
        <picklist>
            <picklistValues>
                <fullName>Balen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boxen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bundels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Container</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deellading vrachtwagen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dozen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flessen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glasbok Hout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glasbok Staal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSA BAM Kar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haspels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kannen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kartons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kratten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los gestort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pakken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pallets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rollen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stuks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tanks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volledige vrachtwagen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zakken</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Arrival_Truck_On_Hub__c</fullName>
        <label>Arrival Truck On Hub</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Arrival_Truck_On_Project__c</fullName>
        <label>Datum en tijd klaargezet</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bouwticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bouwticket</label>
        <referenceTo>Building_Ticket__c</referenceTo>
        <relationshipLabel>WWW-Detail</relationshipLabel>
        <relationshipName>WWW_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Box_Number__c</fullName>
        <formula>Location__r.Box_Number__c</formula>
        <label>Box Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Breakable__c</fullName>
        <formula>TEXT(WWW__r.Item__r.Breakable__c)</formula>
        <label>Breakable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Company_City__c</fullName>
        <formula>&apos;WWW__r.Project__r.Account__r.ShippingCity&apos;</formula>
        <label>Building Company City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Company_Phone__c</fullName>
        <formula>WWW__r.Project__r.Account__r.Phone</formula>
        <label>Building Company Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Company_Postalcode__c</fullName>
        <formula>&apos;WWW__r.Project__r.Account__r.ShippingPostalCode&apos;</formula>
        <label>Building Company Postalcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Company_Street__c</fullName>
        <formula>&apos;WWW__r.Project__r.Account__r.ShippingStreet&apos;</formula>
        <label>Building Company Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Company__c</fullName>
        <formula>WWW__r.Project__r.Account__r.Name</formula>
        <label>Building Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caller</label>
        <referenceTo>Projectmember__c</referenceTo>
        <relationshipLabel>WWW-Detail (Caller)</relationshipLabel>
        <relationshipName>WWW_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compleet_klaargezet__c</fullName>
        <label>Compleet klaargezet</label>
        <picklist>
            <picklistValues>
                <fullName>Ja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nee</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contactpersoon_transporteur__c</fullName>
        <label>Contactpersoon transporteur</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_In_Euro_s__c</fullName>
        <label>Currency In Euro&apos;s</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Damage_Package__c</fullName>
        <label>Damage Package</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Of_Delivery__c</fullName>
        <label>Aanleverdatum</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Departure_Truck__c</fullName>
        <label>Departure Truck</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description_Item__c</fullName>
        <formula>WWW__r.Item__r.Description_Item__c</formula>
        <label>Description Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Einddatum_opslag__c</fullName>
        <label>Einddatum opslag</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entry_Date_And_Time__c</fullName>
        <label>Entry Date And Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Envrionmental_Class_Truck__c</fullName>
        <label>Envrionmental Class Truck</label>
        <picklist>
            <picklistValues>
                <fullName>EURO-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EURO-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EURO-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EURO-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EURO-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EURO-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EURO-0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extra_Remarks__c</fullName>
        <label>Opmerkingen</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Foto__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Geef hier of er bij ontvangst van de goederen een foto gemaakt moet worden</inlineHelpText>
        <label>Foto benodigd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grootte_verpakking__c</fullName>
        <label>Grootste verpakking</label>
        <picklist>
            <picklistValues>
                <fullName>Balen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boxen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bundels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Container</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deellading vrachtwagen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dozen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flessen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glasbok Hout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glasbok Staal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSA BAM Kar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haspels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kannen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kartons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kratten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los gestort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pakken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pallets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rollen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stuks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tanks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volledige vrachtwagen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zakken</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <inlineHelpText>In milimeters</inlineHelpText>
        <label>Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hub__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hub</label>
        <referenceTo>Hub__c</referenceTo>
        <relationshipLabel>WWW-Detail</relationshipLabel>
        <relationshipName>WWW_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <formula>WWW__r.Item__r.Name</formula>
        <label>Item Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kind_Of_Packages__c</fullName>
        <formula>TEXT(WWW__r.Item__r.Kind_Of_Packages__c)</formula>
        <label>Kind Of Packages</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <inlineHelpText>in milimeters</inlineHelpText>
        <label>Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <formula>Location__r.Level__c</formula>
        <label>Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipName>Itemlocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_Of_Invoked_Items__c</fullName>
        <inlineHelpText>hier alleen een aantal invullen indien de items nog niet op de Hub delivered zijn en er wel aan een oproep van de bouwlocatie is gekomen</inlineHelpText>
        <label>Number Of Invoked Items</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Items__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Aantal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Packages_On__c</fullName>
        <label>Number Of Packages On Transportion Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Packages__c</fullName>
        <label>Number Of Packages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Pallets__c</fullName>
        <label>Number Of Pallets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Units_Per_Package__c</fullName>
        <formula>WWW__r.Item__r.Number_Of_Units_Per_Package__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Of Units Per Package</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opslagduur__c</fullName>
        <label>Opslagduur</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pallet_Place__c</fullName>
        <formula>Location__r.Pallet_Place__c</formula>
        <label>Pallet Place</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Delivery_Time__c</fullName>
        <label>Preferred Delivery Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <formula>WWW__r.Project__r.Project_omschrijving__c</formula>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Projectcode</label>
        <referenceTo>Projecten__c</referenceTo>
        <relationshipLabel>WWW-Detail</relationshipLabel>
        <relationshipName>Itemlocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_leider__c</fullName>
        <formula>TEXT(Project__r.Projectleider__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project leider</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projectbeschrijving__c</fullName>
        <formula>Project__r.Project_omschrijving__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projectbeschrijving</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projectmember_Company__c</fullName>
        <formula>&apos;Projectmember__r.Contact__r.Account.Name&apos;</formula>
        <label>Projectmember Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projectmember_Email__c</fullName>
        <formula>Projectmember__r.Contact__r.Email</formula>
        <label>Projectmember Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projectmember_Name__c</fullName>
        <formula>Projectmember__r.Contact__r.FirstName +  &apos; &apos; + Projectmember__r.Contact__r.LastName</formula>
        <label>Projectmember Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projectmember_Phone__c</fullName>
        <formula>&apos;Phone: &apos; + Projectmember__r.Contact__r.Phone + &apos; &apos;  + &apos;Mobile: &apos; + Projectmember__r.Contact__r.MobilePhone</formula>
        <label>Projectmember Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projectmember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Projectmember</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Project__c</field>
                <operation>equals</operation>
                <valueField>Projectmember__c.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Projectmember__c</referenceTo>
        <relationshipName>Itemlocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receiver_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receiver (Account)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WWW-Detail (Receiver (Account))</relationshipLabel>
        <relationshipName>WWW_Detail1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reden_niet_compleet_uigevoerd__c</fullName>
        <label>Reden niet compleet uitgevoerd</label>
        <picklist>
            <picklistValues>
                <fullName>(deels) niet aanwezig</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stuk</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rejected_On__c</fullName>
        <label>Rejected On</label>
        <picklist>
            <picklistValues>
                <fullName>Hub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remarks_Item__c</fullName>
        <formula>WWW__r.Item__r.Toelichting__c</formula>
        <label>Remarks Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_ID__c</fullName>
        <externalId>true</externalId>
        <label>SF_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <formula>Location__r.Section__c</formula>
        <label>Section</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shelving_Subdivision__c</fullName>
        <formula>Location__r.Shelving_Subdivision__c</formula>
        <label>Shelving (Subdivision)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sizes__c</fullName>
        <formula>&apos;L: &apos; +TEXT(Length__c)+ &apos; x W: &apos;+ TEXT(Width__c) + &apos; x H: &apos; + TEXT(Height__c)</formula>
        <inlineHelpText>Kubieke meters LxWxH</inlineHelpText>
        <label>Sizes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Square_Meters__c</fullName>
        <formula>( Length__c  *  Width__c )/1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Square Meters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier_City__c</fullName>
        <formula>Supplier__r.ShippingCity</formula>
        <label>Supplier City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Country__c</fullName>
        <formula>Supplier__r.ShippingCountry</formula>
        <label>Supplier Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Phone__c</fullName>
        <formula>Supplier__r.Phone</formula>
        <label>Supplier Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Postalcode__c</fullName>
        <formula>Supplier__r.ShippingPostalCode</formula>
        <label>Supplier Postalcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Street__c</fullName>
        <formula>Supplier__r.ShippingStreet</formula>
        <label>Supplier Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WWW-Detail (Supplier)</relationshipLabel>
        <relationshipName>WWW_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Temporary_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Vul hier alleen de tijdelijke locatie in</inlineHelpText>
        <label>Temporary Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>WWW-Detail (Temporary location)</relationshipLabel>
        <relationshipName>Itemlocations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Toelichting__c</fullName>
        <label>Toelichting</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Toename_palletplaatsen__c</fullName>
        <label>Toename palletplaatsen</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transport_kar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transport kar</label>
        <referenceTo>Transport_Kar__c</referenceTo>
        <relationshipLabel>WWW-Detail</relationshipLabel>
        <relationshipName>WWW_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transportation_Unit_Packages__c</fullName>
        <label>Transportation Unit Packages</label>
        <picklist>
            <picklistValues>
                <fullName>Pallets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cart</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transporter_City__c</fullName>
        <formula>Transporter__r.ShippingCity</formula>
        <label>Transporter City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transporter_Contact_Email__c</fullName>
        <formula>Transporter_Contact__r.Email</formula>
        <label>Transporter Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transporter_Contact_Phone__c</fullName>
        <formula>&apos;Phone: &apos; +  Transporter_Contact__r.Phone + &apos; &apos;  + &apos;Mobile: &apos; +  Transporter_Contact__r.MobilePhone</formula>
        <label>Transporter Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transporter_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transporter Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Transporter__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>WWW-Detail</relationshipLabel>
        <relationshipName>Itemlocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transporter_Country__c</fullName>
        <formula>Transporter__r.ShippingCountry</formula>
        <label>Transporter Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transporter_Phone__c</fullName>
        <formula>Transporter__r.Phone</formula>
        <label>Transporter Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transporter_Postalcode__c</fullName>
        <formula>Transporter__r.ShippingPostalCode</formula>
        <label>Transporter Postalcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transporter_Street__c</fullName>
        <formula>Transporter__r.ShippingStreet</formula>
        <label>Transporter Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transporter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transporter</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Transporter</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Itemlocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transporteur__c</fullName>
        <label>Transporteur</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWWD_sublocations__c</fullName>
        <label>WWWD sublocations</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWW__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>WWW</label>
        <referenceTo>WWW__c</referenceTo>
        <relationshipLabel>WWW-Detail (WWW)</relationshipLabel>
        <relationshipName>WWW_Detail1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <formula>Location__r.Warehouse__c</formula>
        <label>Warehouse</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <formula>WWW__r.Item__r.Weight__c * Number_Of_Items__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gewicht item vermenigvuldigd met het aantal items</inlineHelpText>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <inlineHelpText>In milimeters</inlineHelpText>
        <label>Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>beschadiging_pakket__c</fullName>
        <label>beschadiging pakket</label>
        <picklist>
            <picklistValues>
                <fullName>Ja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nee</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>WWW-Detail</label>
    <listViews>
        <fullName>Afgeroepen</fullName>
        <columns>NAME</columns>
        <columns>Item_Name__c</columns>
        <columns>Entry_Date_And_Time__c</columns>
        <columns>Number_Of_Invoked_Items__c</columns>
        <columns>Description_Item__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>WWW_Detail__c.Invoked</value>
        </filters>
        <label>Afgeroepen</label>
        <language>nl_NL</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Number_Of_Items__c</columns>
        <columns>Project__c</columns>
        <columns>Item_Name__c</columns>
        <columns>Projectmember_Name__c</columns>
        <columns>Entry_Date_And_Time__c</columns>
        <columns>Date_Of_Delivery__c</columns>
        <columns>Extra_Remarks__c</columns>
        <columns>Remarks__c</columns>
        <columns>Remarks_Item__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Warehouse__c</columns>
        <columns>Hub__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_item_not_yet_on_their_final_location</fullName>
        <columns>NAME</columns>
        <columns>Number_Of_Items__c</columns>
        <columns>Temporary_Location__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Temporary_Location__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Alle items nog niet op  eindlocatie</label>
        <language>nl_NL</language>
    </listViews>
    <listViews>
        <fullName>All_items_to_be_shipped_to_project_today</fullName>
        <columns>NAME</columns>
        <columns>Item_Name__c</columns>
        <columns>Preferred_Delivery_Time__c</columns>
        <columns>Departure_Truck__c</columns>
        <columns>Number_Of_Items__c</columns>
        <columns>Location__c</columns>
        <columns>Remarks_Item__c</columns>
        <columns>Breakable__c</columns>
        <columns>Weight__c</columns>
        <columns>Sizes__c</columns>
        <columns>Transporter__c</columns>
        <columns>Transporter_Contact_Phone__c</columns>
        <columns>Project__c</columns>
        <columns>Projectmember_Company__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>WWW_Detail__c.Invoked</value>
        </filters>
        <filters>
            <field>Preferred_Delivery_Time__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Departure_Truck__c</field>
            <operation>equals</operation>
        </filters>
        <label>Alle items vandaag naar het project</label>
        <language>nl_NL</language>
    </listViews>
    <listViews>
        <fullName>Complete_stock_on_Hub</fullName>
        <columns>NAME</columns>
        <columns>Description_Item__c</columns>
        <columns>Number_Of_Items__c</columns>
        <columns>Location__c</columns>
        <columns>Project__c</columns>
        <columns>Projectmember_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>WWW_Detail__c.Delivered_2_Hub</value>
        </filters>
        <label>Komplete voorraad op de Hub</label>
        <language>nl_NL</language>
    </listViews>
    <listViews>
        <fullName>Invoked_items_without_a_transporter</fullName>
        <columns>NAME</columns>
        <columns>Number_Of_Items__c</columns>
        <columns>Location__c</columns>
        <columns>Preferred_Delivery_Time__c</columns>
        <columns>Project__c</columns>
        <columns>Projectmember_Name__c</columns>
        <columns>Projectmember_Phone__c</columns>
        <columns>Projectmember_Email__c</columns>
        <columns>Sizes__c</columns>
        <columns>Weight__c</columns>
        <columns>Transporter__c</columns>
        <columns>Box_Number__c</columns>
        <columns>Pallet_Place__c</columns>
        <columns>Shelving_Subdivision__c</columns>
        <columns>Warehouse__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>WWW_Detail__c.Invoked</value>
        </filters>
        <filters>
            <field>Transporter__c</field>
            <operation>equals</operation>
        </filters>
        <label>Afgeroepen items zonder transporteur</label>
        <language>nl_NL</language>
    </listViews>
    <nameField>
        <displayFormat>WWW-D-{0}</displayFormat>
        <label>WWW Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WWW-Detail</pluralLabel>
    <recordTypes>
        <fullName>Delivered_2_Hub</fullName>
        <active>true</active>
        <label>Ontvangen</label>
    </recordTypes>
    <recordTypes>
        <fullName>Delivered_2_Project</fullName>
        <active>true</active>
        <label>Afleveren</label>
    </recordTypes>
    <recordTypes>
        <fullName>Invoked</fullName>
        <active>true</active>
        <label>Afroepen</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rejected</fullName>
        <active>true</active>
        <label>Afwijzen</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reserved</fullName>
        <active>true</active>
        <label>Verwachten</label>
    </recordTypes>
</CustomObject>